--- a/projekt-1Jul.CSS
+++ b/projekt-1Jul.CSS
@@ -3,3 +3,16 @@ label {
     font: 1rem 'Fira Sans', sans-serif;
 }
 
+div {
+    position: relative;
+    width:100px;
+    height:100px;
+    float:left;
+    border:1px solid #000;
+    margin:1em;
+}
+
+img {
+    width: 100%;
+    height:auto;
+}
