--- a/projekt-1Jul.CSS
+++ b/projekt-1Jul.CSS
@@ -1,7 +1,7 @@
 label {
     display: block;
     font: 1rem 'Fira Sans', sans-serif;
-    border:1px solid #900;
+    color:1px solid #900;
 }
 
 body {
